# cipherstrike

./: .env.example  README.md  docker-compose.yml  pyproject.toml  run_api.py
apps/api/: .env.example  Dockerfile  requirements.txt
apps/api/app/: __init__.py  config.py  db.py  deps.py  main.py  security.py
apps/api/app/routers/: auth.py  chat.py  reports.py  sessions.py  tools.py
apps/api/app/schemas/: __init__.py  auth.py  domain.py
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/public/: stitch-agentic-chat.html  stitch-agentic-workspace.html  stitch-landing.html  stitch-login.html
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(agentic)/: layout.tsx
apps/web/src/app/(agentic)/run-scan/: page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/analytics/: page.tsx
apps/web/src/app/(app)/chat/: page.tsx
apps/web/src/app/(app)/docs/: page.tsx
apps/web/src/components/: AppShell.tsx  ArsenalIcon.tsx  PageBreadcrumbs.tsx  Protected.tsx  RunResultSummary.tsx  SessionTerminalModal.tsx  ThreatSurfaceEvolutionMap.tsx  session-types.ts
apps/web/src/components/agentic/: AgenticChatView.tsx  RunScanShell.tsx  StitchAgenticFrame.tsx
apps/web/src/components/stitch/: LandingAuthCta.tsx  StitchLandingPage.tsx
apps/web/src/lib/: agentic-agents.ts  api.ts  arsenal-fallback-tools.ts  auth-context.tsx  env.ts  nav.ts  run-scan-threads.ts  tool-arsenal-config.ts
src/hex_chat/: __init__.py  __main__.py  agent.py  cli.py  config.py  mcp_result.py  mcp_session.py  ollama_client.py  tool_adapter.py
(+22 files in other folders)
