[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hex-chat"
version = "0.1.0"
description = "Interactive CLI chat with Ollama and HexStrike MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "rich>=13.7.0",
  "requests>=2.31.0",
]

[project.scripts]
hex-chat = "hex_chat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
